tests/baselines/reference/parserParameterList2.errors.txt
parserParameterList2.ts(2,5): error TS1015: Parameter cannot have question mark and initializer.


==== parserParameterList2.ts (1 errors) ====
    class C {
      F(A?= 0) { }
        ~
!!! error TS1015: Parameter cannot have question mark and initializer.
    }